--- a/style.css
+++ b/style.css
@@ -69,15 +69,13 @@ html, body{
     font-size: 4.6vw;
     font-weight: 600;
     line-height: 5vw;
-    margin-bottom: 20px;
 }
 .left span{
     color: #F66801;
 }
 .left p{
-    margin-bottom: 24px;
     font-size: 1.6vw;
-    padding: 45px 5px;
+    padding: 20px 7px;
 }
 .left button{
     padding: 10px 20px;
@@ -101,12 +99,44 @@ html, body{
     width: 100%;
     margin-top: 5vw;
 }
-@media (max-with:600px) {
+@media (max-width:600px) {
     .nav{
         background-color: yellowgreen;
         padding: 0 5vw;
-        height: 6px;
+        height: 60px;
     }
-    
-    
-};
+    .nav-part2 ul a{
+        font-size: 6vw;
+        display: none;
+    }
+    .nav-part2 ul i{
+        display: block;
+        font-size: 6vw;
+    }
+    .content{
+        height: calc(100% - 60px);
+        flex-direction: column;
+    }
+    .left{
+        height: 50%;
+        width: 100%;
+    }
+    .right{
+        margin-top: 0vw;
+        height: 50%;
+        width: 100%;
+    }
+    .left h1{
+        font-size: 10vw;
+        line-height: 11vw;
+    }
+    .left p{
+        font-size: 5.4vw;
+        font-weight: 500;
+        line-height: 5vw;
+    }
+    .left button{
+        font-size: 3.4vw;
+        margin-left: 25vw;
+    }
+}
